# ai-agents

./: .env.example  .gitignore  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: run_agent.py
src/agents/devops/: __init__.py  tools.py
src/agents/finance/: __init__.py  tools.py
src/agents/media/: __init__.py  tools.py
src/agents/office/: __init__.py  tools.py
src/agents/social/: __init__.py  tools.py
src/shared/: agent.py  config.py
tests/: test_shared_loop.py
tests/agents/: test_devops.py  test_finance.py  test_media.py  test_office.py  test_social.py
